# client

./: .gitignore  README.md  electrobun.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
core/: Cargo.toml
core/src/: backend.rs  error.rs  event.rs  ids.rs  lib.rs  mock.rs  model.rs
docs/: DATA_INTERFACE.md  MVP_CHECKLIST.md
src/: App.tsx  bindings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
