[package]
name = "vauxl-app"
version = "0.1.0"
description = "Vauxl Matrix client (Tauri shell)"
authors = ["Vauxl"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vauxl_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1" }

[dependencies]
vauxl-core = { path = "../core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2" }
tauri-plugin-log = "2"
tauri-specta = { version = "2.0.0-rc.25", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-typescript = "0.0.12"
tokio = { version = "1", features = ["sync"] }
